@@ -1,15 +1,29 @@
 import org.jetbrains.kotlin.util.suffixIfNot
 
+buildscript {
+    val atomicfuVersion: String by project
+    dependencies {
+        classpath("org.jetbrains.kotlinx:atomicfu-gradle-plugin:$atomicfuVersion")
+    }
+}
 
 val ktorVersion: String by project
 val logbackVersion: String by project
 val serializationVersion: String by project
 val koinVersion: String by project
+val kafkaClientVersion: String by project
+val kotlinLoggingJvmVersion: String by project
+val coroutinesVersion: String by project
+val kotestVersion: String by project
+val testContainersVersion: String by project
+val kotestTestContainers: String by project
+val kotestKoin: String by project
 
 plugins {
     id("application")
     kotlin("plugin.serialization")
     kotlin("multiplatform")
+    id("io.kotest.multiplatform")
 }
 
 application {
@@ -18,6 +32,7 @@ application {
 
 repositories {
     maven { url = uri("https://maven.pkg.jetbrains.space/public/p/ktor/eap") }
+    mavenCentral()
 }
 
 
@@ -45,13 +60,19 @@ kotlin {
                     implementation(ktor("content-negotiation"))
                     implementation("io.insert-koin:koin-core:$koinVersion")
                     implementation("io.insert-koin:koin-ktor:$koinVersion")// "io.ktor:ktor-server-content-negotiation:$ktorVersion"
+                    implementation("com.github.IlyaKalashnikov:ktor-kafka-client:-SNAPSHOT")
+                    implementation("org.apache.kafka:kafka-clients:$kafkaClientVersion")
+                    implementation("org.apache.kafka:kafka-streams:$kafkaClientVersion")
+                    implementation("io.github.microutils:kotlin-logging-jvm:$kotlinLoggingJvmVersion")
 
+                    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion")
                     implementation(project(":fintrack-common"))
                     implementation(project(":fintrack-api"))
                     implementation(project(":fintrack-mapper"))
                     implementation(project(":fintrack-stubs"))
                     implementation(project(":fintrack-service"))
                     implementation(project(":fintrack-ktor-plugin"))
+                    implementation(project(":fintrack-kafka"))
 
                     implementation("ch.qos.logback:logback-classic:$logbackVersion")
                     implementation(ktor("call-logging"))
@@ -66,9 +87,25 @@ kotlin {
         val jvmTest by getting {
             dependencies {
                 implementation(kotlin("test-junit"))
-                implementation(ktor("test-host")) // "io.ktor:ktor-server-test-host:$ktorVersion"
+                implementation(ktor("test-host"))
                 implementation(ktor("content-negotiation", prefix = "client-"))
+                implementation("io.kotest.extensions:kotest-extensions-testcontainers:${kotestTestContainers}")
+                implementation("io.kotest.extensions:kotest-extensions-koin:${kotestKoin}")
+                implementation("io.kotest:kotest-runner-junit5:${kotestVersion}")
+                implementation("io.kotest:kotest-assertions-core:${kotestVersion}")
+                implementation("org.testcontainers:kafka:${testContainersVersion}")
+                implementation("io.insert-koin:koin-test:${koinVersion}")
             }
         }
     }
+}
+
+tasks {
+    // Tests
+    withType<Test>{
+        useJUnitPlatform()
+        //костыль для котеста и джавы 17
+        jvmArgs("--add-opens","java.base/java.util=ALL-UNNAMED")
+    }
+
 }
